# sbi-hackathon

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6b09b7005a82_initial_schema.py  80916cd8d4fc_add_handoff_requests_table.py  983def1dec81_add_customer_preferred_language.py  a731a75df0ba_add_transaction_event_id.py  b76c9c475c2a_add_staff_notes_table.py  c4f2a9b7d31e_add_standing_instructions.py  e1eeaf270f91_add_savings_goals.py  e56ffc834635_add_sim_injections_table.py  f74e44645e6c_add_notifications_table.py
backend/app/: main.py  seed.py
backend/app/agents/: __init__.py  acquisition.py  actions.py  adoption.py  checkpointer.py  compliance_terms.py  context.py  engagement.py  entrypoints.py  goal_tools.py  graph.py  guardrails.py  handoff_tools.py  language.py  memory.py  standing_tools.py  state.py  supervisor.py  toolkit.py  tracing.py
backend/app/core/: config.py  db.py  errors.py  logging.py  ratelimit.py  redis.py  runtime_settings.py  security.py
backend/app/llm/: __init__.py  base.py  budget.py  cost.py  embeddings.py  fake.py  router.py
backend/app/models/: __init__.py  audit.py  banking.py  base.py  catalog.py  conversation.py  crm.py  customer.py  engagement.py  enums.py  goal.py  handoff.py  identity.py  memory.py  notes.py  sim_injection.py  standing.py  tracing.py
backend/app/schemas/: auth.py  chat.py  console.py  customer.py  goals.py  insights.py  memory.py  products.py  standing.py
backend/app/services/: __init__.py  email.py  goals.py  insights.py  kyc.py  ledger.py  notifications.py  products.py  standing.py
backend/app/sim/: events.py  generator.py  personas.py  runner.py  seed.py
backend/app/workers/: __init__.py  activity.py  event_consumer.py  prefilter.py  scheduler.py
backend/scripts/: dev_login.py
backend/tests/: conftest.py  test_budget.py  test_cost.py  test_insights.py  test_provider_mapping.py  test_router.py  test_router_stream.py
backend/tests/agents/: conftest.py  test_acquisition_gate.py  test_adoption_insights.py  test_compliance_terms.py  test_engagement_features.py  test_goals_tools.py  test_graph_flow.py  test_guardrails.py  test_handoff.py  test_language.py  test_memory.py  test_memory_facts.py  test_proposals.py  test_services.py  test_standing_tools.py  test_streaming.py
backend/tests/api/: conftest.py  test_activity.py  test_analytics.py  test_chat.py  test_console.py  test_console_export.py  test_console_settings.py  test_customers.py  test_demo_activity.py  test_demo_helpers.py  test_errors.py  test_goals.py  test_handoff_console.py  test_insights.py  test_me.py  test_memory.py  test_notifications.py  test_nudges.py  test_ops_surface.py  test_products.py  test_ratelimit.py  test_standing.py
backend/tests/auth/: conftest.py  fake_authenticator.py  test_dependencies.py  test_email_service.py  test_google_oauth.py  test_jwt.py  test_otp.py  test_session_endpoints.py  test_sessions.py  test_webauthn.py
backend/tests/sim/: test_events.py  test_generator.py  (+3 more)
(+186 files in other folders)
